# ChanceTime

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  PROGRESS.md  README.md  SCROLL.md  chancetime-cli.spec  docker-compose.yml  pyproject.toml
backtests/fixtures/: sample_series.csv
config/: accounts.yaml.example  default.yaml  live_micro.yaml  paper_bag.yaml  user.yaml.example
desktop/: PACKAGING.md  README.md  dev.sh  package-lock.json  package.json
desktop/sidecar/: .gitignore  README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs
desktop/ui/: index.html  index.html.bak  main.js  styles.css
docs/: CRYPTO_VENUES.md  LIVE_READINESS.md  ORIENTATION.md  SECURITY.md  VPS_AND_BACKUPS.md
models/: .gitkeep
scripts/: build-desktop.sh  fix-venv-after-move.sh
secrets/: README.md
src/chancetime/: __init__.py  __main__.py  bot.py  flair.py  main.py
src/chancetime/backtesting/: __init__.py  engine.py  fees.py  loader.py  metrics.py  models.py  walk_forward.py
src/chancetime/cli/: __init__.py  books.py  common.py  config_cmds.py  crypto_cmds.py  exchange_cmds.py  live.py  llm_cmds.py  research.py  run.py
src/chancetime/crypto_exchange/: __init__.py  bot.py  models.py  paper.py  store.py  venues.py
src/chancetime/crypto_updown/: __init__.py  bot.py  clob.py  clob_ws.py  gamma.py  hub.py  kill_switches.py  lock.py  models.py  paper.py  scorecard.py  spot.py  store.py  strategies.py
src/chancetime/dashboard/: __init__.py  app.py
src/chancetime/data_layer/: __init__.py  arb_discovery.py  base.py  bbo.py  composite.py  history.py  kalshi.py  matching.py  mock.py  models.py  polymarket_us.py  profiles.py  timeparse.py  universe.py
src/chancetime/execution/: __init__.py  auth.py  engine.py  live_kalshi.py  live_polymarket.py
src/chancetime/llm/: __init__.py  cache.py  calibrate.py  client.py  match_venues.py  news_brief.py  prompts.py  review.py  schemas.py
src/chancetime/ml/: __init__.py  train.py
tests/: test_arb_bbo_dual_leg.py  test_arb_cross.py  test_backtest.py  test_books_dashboard.py  test_bot_loop.py  test_complement_arb.py  test_config.py  test_config_user.py  test_crypto_exchange.py  test_crypto_updown.py  test_flair.py  test_kalshi_paths.py  test_live_book.py  test_live_phase6.py  test_llm.py  test_llm_budget.py  test_llm_calibrated.py  test_mean_revert.py  test_mock_data.py  test_persistence.py  test_phase10_history.py  test_phase11.py  test_phase19_portfolio.py  test_phase20_scorecard.py  test_phase3.py  test_phase8_risk.py  test_phase9.py  test_portfolio.py  test_presets_suggest.py  test_research_loggers.py  test_risk_execution.py  test_scorecard_kill.py  test_strategies.py  test_strategy_stats.py  test_train_ml.py  test_tweet_hybrid_strategy.py  test_universe_profiles.py
(+37 files in other folders)
